--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"start:dev": "webpack serve --mode development --open --hot",
-		"build": "webpack --mode production",
+		"start:dev": "webpack serve --env ENVIRONMENT=development --open --hot",
+		"start:staging": "webpack serve --env ENVIRONMENT=staging --open --hot",
+		"start:prod": "webpack serve --env ENVIRONMENT=production --open --hot",
+		"build:dev": "webpack --env ENVIRONMENT=development --mode production",
+		"build:prod": "webpack --env ENVIRONMENT=production --mode production",
+		"build:staging": "webpack --env ENVIRONMENT=staging --mode production",
 		"lint:js": "eslint src --ext js,ts,jsx,tsx --max-warnings=0",
 		"lint:js:fix": "eslint src --ext js,ts,jsx,tsx --fix",
 		"lint:all": "eslint src --max-warnings=0"
@@ -24,21 +28,22 @@
 		"@types/node": "^18.6.1",
 		"@types/react": "^18.0.15",
 		"@types/react-dom": "^18.0.6",
+		"@typescript-eslint/eslint-plugin": "^5.12.1",
+		"@typescript-eslint/parser": "^5.12.1",
 		"babel-loader": "^8.2.5",
-		"html-webpack-plugin": "^5.5.0",
-		"ts-loader": "^9.3.1",
-		"typescript": "^4.7.4",
-		"webpack": "^5.73.0",
-		"webpack-cli": "^4.10.0",
-		"webpack-dev-server": "^4.9.3",
+		"dotenv": "^16.0.1",
 		"eslint": "^8.9.0",
 		"eslint-config-prettier": "^8.4.0",
 		"eslint-plugin-import-helpers": "^1.2.1",
 		"eslint-plugin-prettier": "^4.0.0",
 		"eslint-plugin-react": "^7.28.0",
 		"eslint-plugin-react-hooks": "^4.3.0",
-		"@typescript-eslint/eslint-plugin": "^5.12.1",
-		"@typescript-eslint/parser": "^5.12.1",
-		"prettier": "2.5.1"
+		"html-webpack-plugin": "^5.5.0",
+		"prettier": "2.5.1",
+		"ts-loader": "^9.3.1",
+		"typescript": "^4.7.4",
+		"webpack": "^5.73.0",
+		"webpack-cli": "^4.10.0",
+		"webpack-dev-server": "^4.9.3"
 	}
 }
