--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"start:dev": "webpack serve --env ENVIRONMENT=development",
-		"start:staging": "webpack serve --env ENVIRONMENT=staging",
-		"start:prod": "webpack serve --env ENVIRONMENT=production",
-		"build:dev": "webpack --env ENVIRONMENT=development --mode production",
-		"build:prod": "webpack --env ENVIRONMENT=production --mode production",
-		"build:staging": "webpack --env ENVIRONMENT=staging --mode production",
+		"start:dev": "webpack serve --config webpack.config.ts --env ENVIRONMENT=development",
+		"start:staging": "webpack serve --config webpack.config.ts --env ENVIRONMENT=staging",
+		"start:prod": "webpack serve --config webpack.config.ts --env ENVIRONMENT=production",
+		"build:dev": "webpack --config webpack.prod.config.ts --env ENVIRONMENT=development --mode production",
+		"build:prod": "webpack --config webpack.prod.config.ts --env ENVIRONMENT=production --mode production",
+		"build:staging": "webpack --config webpack.prod.config.ts --env ENVIRONMENT=staging --mode production",
 		"lint:js": "eslint src --ext js,ts,jsx,tsx --max-warnings=0",
 		"lint:js:fix": "eslint src --ext js,ts,jsx,tsx --fix",
 		"lint:all": "eslint src --max-warnings=0",
-		"prepare": "husky install"
+		"prepare": "husky install",
+		"test": "jest"
 	},
 	"keywords": [],
 	"author": "",
@@ -24,14 +25,23 @@
 	},
 	"devDependencies": {
 		"@babel/core": "^7.18.9",
+		"@babel/plugin-transform-runtime": "^7.18.9",
 		"@babel/preset-env": "^7.18.9",
 		"@babel/preset-react": "^7.18.6",
+		"@babel/preset-typescript": "^7.18.6",
+		"@babel/runtime": "^7.18.9",
+		"@testing-library/jest-dom": "^5.16.4",
+		"@testing-library/react": "^13.3.0",
+		"@types/fork-ts-checker-webpack-plugin": "^0.4.5",
+		"@types/jest": "^28.1.6",
 		"@types/node": "^18.6.1",
 		"@types/react": "^18.0.15",
 		"@types/react-dom": "^18.0.6",
+		"@types/webpack-dev-server": "^4.7.2",
 		"@typescript-eslint/eslint-plugin": "^5.12.1",
 		"@typescript-eslint/parser": "^5.12.1",
 		"babel-loader": "^8.2.5",
+		"clean-webpack-plugin": "^4.0.0",
 		"dotenv": "^16.0.1",
 		"eslint": "^8.9.0",
 		"eslint-config-prettier": "^8.4.0",
@@ -39,11 +49,13 @@
 		"eslint-plugin-prettier": "^4.0.0",
 		"eslint-plugin-react": "^7.28.0",
 		"eslint-plugin-react-hooks": "^4.3.0",
+		"eslint-webpack-plugin": "^3.2.0",
+		"fork-ts-checker-webpack-plugin": "^7.2.13",
 		"html-webpack-plugin": "^5.5.0",
 		"husky": ">=6",
 		"lint-staged": "^13.0.3",
 		"prettier": "2.5.1",
-		"ts-loader": "^9.3.1",
+		"ts-node": "^10.9.1",
 		"typescript": "^4.7.4",
 		"webpack": "^5.73.0",
 		"webpack-cli": "^4.10.0",
