--- a/package.json
+++ b/package.json
@@ -53,8 +53,11 @@
 		"fork-ts-checker-webpack-plugin": "^7.2.13",
 		"html-webpack-plugin": "^5.5.0",
 		"husky": ">=6",
+		"jest": "^28.1.3",
+		"jest-environment-jsdom": "^28.1.3",
 		"lint-staged": "^13.0.3",
 		"prettier": "2.5.1",
+		"ts-jest": "^28.0.7",
 		"ts-node": "^10.9.1",
 		"typescript": "^4.7.4",
 		"webpack": "^5.73.0",
