--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
 		"test:watch:all": "jest --watchAll",
 		"test:ci": "CI=true yarn test",
 		"test:unit": "jest -c jest.config.unit.js",
-		"test:integration": "jest -c jest.config.integration.js"
+		"test:integration": "jest -c jest.config.integration.js",
+		"commit": "git-cz"
 	},
 	"keywords": [],
 	"author": "",
@@ -35,6 +36,8 @@
 		"@babel/preset-react": "^7.18.6",
 		"@babel/preset-typescript": "^7.18.6",
 		"@babel/runtime": "^7.18.9",
+		"@commitlint/cli": "^17.0.3",
+		"@commitlint/config-conventional": "^17.0.3",
 		"@testing-library/jest-dom": "^5.16.4",
 		"@testing-library/react": "^13.3.0",
 		"@types/fork-ts-checker-webpack-plugin": "^0.4.5",
@@ -47,6 +50,8 @@
 		"@typescript-eslint/parser": "^5.12.1",
 		"babel-loader": "^8.2.5",
 		"clean-webpack-plugin": "^4.0.0",
+		"commitizen": "^4.2.5",
+		"cz-conventional-changelog": "3.3.0",
 		"dotenv": "^16.0.1",
 		"eslint": "^8.9.0",
 		"eslint-config-prettier": "^8.4.0",
@@ -74,5 +79,10 @@
 			"yarn lint:all",
 			"yarn test"
 		]
+	},
+	"config": {
+		"commitizen": {
+			"path": "./node_modules/cz-conventional-changelog"
+		}
 	}
 }
