--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
 	"license": "ISC",
 	"dependencies": {
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"react-router-dom": "^6.2.1"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.18.9",
@@ -40,6 +41,7 @@
 		"@commitlint/config-conventional": "^17.0.3",
 		"@testing-library/jest-dom": "^5.16.4",
 		"@testing-library/react": "^13.3.0",
+		"@testing-library/user-event": "^14.3.0",
 		"@types/fork-ts-checker-webpack-plugin": "^0.4.5",
 		"@types/jest": "^28.1.6",
 		"@types/node": "^18.6.1",
