--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,11 @@
 		"resolveJsonModule": true,
 		"isolatedModules": true,
 		"noEmit": true,
-		"jsx": "react"
+		"jsx": "react",
+		"baseUrl": ".",
+		"paths": {
+			"@react-webpack-boilerplate/*": ["./src/*"],
+		}
 	},
 	"exclude": ["node_modules", "build", "dist"],
 	"include": ["src"]
