--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"lint:js:fix": "eslint src --ext js,ts,jsx,tsx --fix",
 		"lint:all": "eslint src --max-warnings=0",
 		"prepare": "husky install",
-		"test": "jest --coverage false",
+		"test": "jest",
 		"test:watch": "jest --watch",
 		"test:watch:all": "jest --watchAll",
 		"test:ci": "CI=true yarn test",
@@ -44,6 +44,7 @@
 		"@testing-library/user-event": "^14.3.0",
 		"@types/fork-ts-checker-webpack-plugin": "^0.4.5",
 		"@types/jest": "^28.1.6",
+		"@types/mini-css-extract-plugin": "^2.5.1",
 		"@types/node": "^18.6.1",
 		"@types/react": "^18.0.15",
 		"@types/react-dom": "^18.0.6",
@@ -53,6 +54,8 @@
 		"babel-loader": "^8.2.5",
 		"clean-webpack-plugin": "^4.0.0",
 		"commitizen": "^4.2.5",
+		"css-loader": "^6.7.1",
+		"css-minimizer-webpack-plugin": "^4.0.0",
 		"cz-conventional-changelog": "3.3.0",
 		"dotenv": "^16.0.1",
 		"eslint": "^8.9.0",
@@ -68,7 +71,9 @@
 		"jest": "^28.1.3",
 		"jest-environment-jsdom": "^28.1.3",
 		"lint-staged": "^13.0.3",
+		"mini-css-extract-plugin": "^2.6.1",
 		"prettier": "2.5.1",
+		"style-loader": "^3.3.1",
 		"ts-jest": "^28.0.7",
 		"ts-node": "^10.9.1",
 		"typescript": "^4.7.4",
@@ -79,7 +84,7 @@
 	"lint-staged": {
 		"src/**/*.{js,ts,jsx,tsx,json}": [
 			"yarn lint:all",
-			"yarn test"
+			"yarn test --passWithNoTests"
 		]
 	},
 	"config": {
