--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,34 @@
 {
 	"compilerOptions": {
 		"outDir": "./dist/",
+		"target": "ES2021",
 		"lib": ["dom", "dom.iterable", "esnext"],
-		"noImplicitAny": true,
 		"allowJs": true,
 		"allowSyntheticDefaultImports": true,
 		"skipLibCheck": true,
 		"esModuleInterop": true,
 		"strict": true,
 		"forceConsistentCasingInFileNames": true,
+		"module": "esnext",
 		"moduleResolution": "node",
 		"resolveJsonModule": true,
 		"isolatedModules": true,
 		"noEmit": true,
 		"jsx": "react",
+		"removeComments": true,
+		"sourceMap": true,
+		"allowJs": true,
+		"noImplicitReturns": true,
+		"noImplicitThis": true,
+		"noImplicitAny": true,
+		"strictNullChecks": true,
+		"allowSyntheticDefaultImports": true,
+		"declaration": true,
+		"skipLibCheck": true,
+		"incremental": true,
 		"baseUrl": ".",
 		"paths": {
-			"@react-webpack-boilerplate/*": ["./src/*"],
+			"@react-webpack-boilerplate/*": ["./src/*"]
 		}
 	},
 	"exclude": ["node_modules", "build", "dist"],
